# CorpoDrone

./: .env.example  .gitignore  Cargo.toml  README.md  config.toml  setup.ps1  setup.sh  speakers.json
.cargo/: config.toml
.github/workflows/: build.yml
app/: Cargo.toml  Info.plist  entitlements.plist  tauri.conf.json
app/capabilities/: default.json
app/icons/: icon.icns
app/src/: lib.rs  main.rs
app/web-ui/: app.js  index.html  style.css
audio-capture/: Cargo.toml
audio-capture/src/: main.rs
audio-capture/src/capture/: devices.rs  loopback.rs  mic.rs  mod.rs  resampler.rs
audio-capture/src/ipc/: mod.rs  pipe_writer.rs
pipeline/: audio_receiver.py  config.py  diarizer.py  embedding_extractor.py  huggingface_hub_compat.py  pipeline.py  requirements.txt  speaker_database.py  speaker_tracker.py  speech_gate.py  summarizer.py  transcriber.py  transcript_writer.py
python/: audio_receiver.py  config.py  pipeline.py  speaker_tracker.py  summarizer.py
web-server/: Cargo.toml
web-server/src/: hub.rs  main.rs
web-server/src/ipc/: mod.rs  pipe_reader.rs
web-server/src/routes/: api.rs  mod.rs  static_files.rs  ws.rs
web-ui/: app.js  index.html  style.css
