[package]
name = "audio-capture"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
crossbeam-channel = { workspace = true }
clap = { workspace = true }
rubato = "0.16"
bytemuck = "1"

[target.'cfg(windows)'.dependencies]
wasapi = "0.16"
windows = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_Storage_FileSystem",
    "Win32_Security",
] }

[target.'cfg(any(target_os = "macos", target_os = "linux"))'.dependencies]
cpal = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
screencapturekit = { version = "1", features = ["macos_26_0"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
