[package]
name = "web-server"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
clap = { workspace = true }

actix-web = "4"
actix-ws = "0.3"
actix-files = "0.6"
futures-util = "0.3"
parking_lot = "0.12"
tokio-util = { version = "0.7", features = ["io"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Storage_FileSystem",
    "Win32_System_Pipes",
    "Win32_System_IO",
] }
